add feature preview landing page examples in Storybook

--- a/packages/react/src/Box/Box.module.css
+++ b/packages/react/src/Box/Box.module.css
@@ -2055,6 +2055,12 @@
   .Box-regular-marginBlockEnd--96 {
     margin-block-end: var(--base-size-96);
   }
+  .Box-regular-marginBlockEnd--112 {
+    margin-block-end: var(--base-size-112);
+  }
+  .Box-regular-marginBlockEnd--128 {
+    margin-block-end: var(--base-size-128);
+  }
 }
 
 @media screen and (min-width: 80rem) {
@@ -2111,6 +2117,12 @@
   }
   .Box-wide-marginBlockEnd--96 {
     margin-block-end: var(--base-size-96);
+  }
+  .Box-wide-marginBlockEnd--112 {
+    margin-block-end: var(--base-size-112);
+  }
+  .Box-wide-marginBlockEnd--128 {
+    margin-block-end: var(--base-size-128);
   }
 }
 
@@ -2178,172 +2190,190 @@
   margin-inline-start: var(--base-size-128);
 }
 
-.Box-narrow-marginInlineStart-condensed {
+.Box-narrow-marginInlineStart--condensed {
   margin-inline-start: var(--brand-box-spacing-condensed);
 }
-.Box-narrow-marginInlineStart-normal {
+.Box-narrow-marginInlineStart--normal {
   margin-inline-start: var(--brand-box-spacing-normal);
 }
-.Box-narrow-marginInlineStart-spacious {
+.Box-narrow-marginInlineStart--spacious {
   margin-inline-start: var(--brand-box-spacing-spacious);
 }
-.Box-narrow-marginInlineStart-4 {
+.Box-narrow-marginInlineStart--4 {
   margin-inline-start: var(--base-size-4);
 }
-.Box-narrow-marginInlineStart-8 {
+.Box-narrow-marginInlineStart--8 {
   margin-inline-start: var(--base-size-8);
 }
-.Box-narrow-marginInlineStart-12 {
+.Box-narrow-marginInlineStart--12 {
   margin-inline-start: var(--base-size-12);
 }
-.Box-narrow-marginInlineStart-16 {
+.Box-narrow-marginInlineStart--16 {
   margin-inline-start: var(--base-size-16);
 }
-.Box-narrow-marginInlineStart-20 {
+.Box-narrow-marginInlineStart--20 {
   margin-inline-start: var(--base-size-20);
 }
-.Box-narrow-marginInlineStart-24 {
+.Box-narrow-marginInlineStart--24 {
   margin-inline-start: var(--base-size-24);
 }
-.Box-narrow-marginInlineStart-28 {
+.Box-narrow-marginInlineStart--28 {
   margin-inline-start: var(--base-size-28);
 }
-.Box-narrow-marginInlineStart-32 {
+.Box-narrow-marginInlineStart--32 {
   margin-inline-start: var(--base-size-32);
 }
-.Box-narrow-marginInlineStart-36 {
+.Box-narrow-marginInlineStart--36 {
   margin-inline-start: var(--base-size-36);
 }
-.Box-narrow-marginInlineStart-40 {
+.Box-narrow-marginInlineStart--40 {
   margin-inline-start: var(--base-size-40);
 }
-.Box-narrow-marginInlineStart-44 {
+.Box-narrow-marginInlineStart--44 {
   margin-inline-start: var(--base-size-44);
 }
-.Box-narrow-marginInlineStart-48 {
+.Box-narrow-marginInlineStart--48 {
   margin-inline-start: var(--base-size-48);
 }
-.Box-narrow-marginInlineStart-64 {
+.Box-narrow-marginInlineStart--64 {
   margin-inline-start: var(--base-size-64);
 }
-.Box-narrow-marginInlineStart-80 {
+.Box-narrow-marginInlineStart--80 {
   margin-inline-start: var(--base-size-80);
 }
-.Box-narrow-marginInlineStart-96 {
+.Box-narrow-marginInlineStart--96 {
   margin-inline-start: var(--base-size-96);
+}
+.Box-narrow-marginInlineStart--112 {
+  margin-inline-start: var(--base-size-112);
+}
+.Box-narrow-marginInlineStart--128 {
+  margin-inline-start: var(--base-size-128);
 }
 
 @media screen and (min-width: 48rem) {
-  .Box-regular-marginInlineStart-condensed {
+  .Box-regular-marginInlineStart--condensed {
     margin-inline-start: var(--brand-box-spacing-condensed);
   }
-  .Box-regular-marginInlineStart-normal {
+  .Box-regular-marginInlineStart--normal {
     margin-inline-start: var(--brand-box-spacing-normal);
   }
-  .Box-regular-marginInlineStart-spacious {
+  .Box-regular-marginInlineStart--spacious {
     margin-inline-start: var(--brand-box-spacing-spacious);
   }
-  .Box-regular-marginInlineStart-4 {
+  .Box-regular-marginInlineStart--4 {
     margin-inline-start: var(--base-size-4);
   }
-  .Box-regular-marginInlineStart-8 {
+  .Box-regular-marginInlineStart--8 {
     margin-inline-start: var(--base-size-8);
   }
-  .Box-regular-marginInlineStart-12 {
+  .Box-regular-marginInlineStart--12 {
     margin-inline-start: var(--base-size-12);
   }
-  .Box-regular-marginInlineStart-16 {
+  .Box-regular-marginInlineStart--16 {
     margin-inline-start: var(--base-size-16);
   }
-  .Box-regular-marginInlineStart-20 {
+  .Box-regular-marginInlineStart--20 {
     margin-inline-start: var(--base-size-20);
   }
-  .Box-regular-marginInlineStart-24 {
+  .Box-regular-marginInlineStart--24 {
     margin-inline-start: var(--base-size-24);
   }
-  .Box-regular-marginInlineStart-28 {
+  .Box-regular-marginInlineStart--28 {
     margin-inline-start: var(--base-size-28);
   }
-  .Box-regular-marginInlineStart-32 {
+  .Box-regular-marginInlineStart--32 {
     margin-inline-start: var(--base-size-32);
   }
-  .Box-regular-marginInlineStart-36 {
+  .Box-regular-marginInlineStart--36 {
     margin-inline-start: var(--base-size-36);
   }
-  .Box-regular-marginInlineStart-40 {
+  .Box-regular-marginInlineStart--40 {
     margin-inline-start: var(--base-size-40);
   }
-  .Box-regular-marginInlineStart-44 {
+  .Box-regular-marginInlineStart--44 {
     margin-inline-start: var(--base-size-44);
   }
-  .Box-regular-marginInlineStart-48 {
+  .Box-regular-marginInlineStart--48 {
     margin-inline-start: var(--base-size-48);
   }
-  .Box-regular-marginInlineStart-64 {
+  .Box-regular-marginInlineStart--64 {
     margin-inline-start: var(--base-size-64);
   }
-  .Box-regular-marginInlineStart-80 {
+  .Box-regular-marginInlineStart--80 {
     margin-inline-start: var(--base-size-80);
   }
-  .Box-regular-marginInlineStart-96 {
+  .Box-regular-marginInlineStart--96 {
     margin-inline-start: var(--base-size-96);
+  }
+  .Box-regular-marginInlineStart--112 {
+    margin-inline-start: var(--base-size-112);
+  }
+  .Box-regular-marginInlineStart--128 {
+    margin-inline-start: var(--base-size-128);
   }
 }
 
 @media screen and (min-width: 80rem) {
-  .Box-wide-marginInlineStart-condensed {
+  .Box-wide-marginInlineStart--condensed {
     margin-inline-start: var(--brand-box-spacing-condensed);
   }
-  .Box-wide-marginInlineStart-normal {
+  .Box-wide-marginInlineStart--normal {
     margin-inline-start: var(--brand-box-spacing-normal);
   }
-  .Box-wide-marginInlineStart-spacious {
+  .Box-wide-marginInlineStart--spacious {
     margin-inline-start: var(--brand-box-spacing-spacious);
   }
-  .Box-wide-marginInlineStart-4 {
+  .Box-wide-marginInlineStart--4 {
     margin-inline-start: var(--base-size-4);
   }
-  .Box-wide-marginInlineStart-8 {
+  .Box-wide-marginInlineStart--8 {
     margin-inline-start: var(--base-size-8);
   }
-  .Box-wide-marginInlineStart-12 {
+  .Box-wide-marginInlineStart--12 {
     margin-inline-start: var(--base-size-12);
   }
-  .Box-wide-marginInlineStart-16 {
+  .Box-wide-marginInlineStart--16 {
     margin-inline-start: var(--base-size-16);
   }
-  .Box-wide-marginInlineStart-20 {
+  .Box-wide-marginInlineStart--20 {
     margin-inline-start: var(--base-size-20);
   }
-  .Box-wide-marginInlineStart-24 {
+  .Box-wide-marginInlineStart--24 {
     margin-inline-start: var(--base-size-24);
   }
-  .Box-wide-marginInlineStart-28 {
+  .Box-wide-marginInlineStart--28 {
     margin-inline-start: var(--base-size-28);
   }
-  .Box-wide-marginInlineStart-32 {
+  .Box-wide-marginInlineStart--32 {
     margin-inline-start: var(--base-size-32);
   }
-  .Box-wide-marginInlineStart-36 {
+  .Box-wide-marginInlineStart--36 {
     margin-inline-start: var(--base-size-36);
   }
-  .Box-wide-marginInlineStart-40 {
+  .Box-wide-marginInlineStart--40 {
     margin-inline-start: var(--base-size-40);
   }
-  .Box-wide-marginInlineStart-44 {
+  .Box-wide-marginInlineStart--44 {
     margin-inline-start: var(--base-size-44);
   }
-  .Box-wide-marginInlineStart-48 {
+  .Box-wide-marginInlineStart--48 {
     margin-inline-start: var(--base-size-48);
   }
-  .Box-wide-marginInlineStart-64 {
+  .Box-wide-marginInlineStart--64 {
     margin-inline-start: var(--base-size-64);
   }
-  .Box-wide-marginInlineStart-80 {
+  .Box-wide-marginInlineStart--80 {
     margin-inline-start: var(--base-size-80);
   }
-  .Box-wide-marginInlineStart-96 {
+  .Box-wide-marginInlineStart--96 {
     margin-inline-start: var(--base-size-96);
+  }
+  .Box-wide-marginInlineStart--112 {
+    margin-inline-start: var(--base-size-112);
+  }
+  .Box-wide-marginInlineStart--128 {
+    margin-inline-start: var(--base-size-128);
   }
 }
 
