remove legacy stories

--- a/packages/react/src/templates/FeaturePreviewLPs/FeaturePreviewLevelOne/FeaturePreviewLevelOne.module.css
+++ b/packages/react/src/templates/FeaturePreviewLPs/FeaturePreviewLevelOne/FeaturePreviewLevelOne.module.css
@@ -1,11 +1,7 @@
 /**
- * Overrides
+ * Custom overrides
  * Should be fixed in the respective components
  */
-
-.FeaturePreview__borderTop {
-  border-top: var(--brand-borderWidth-thin) solid var(--brand-color-border-default);
-}
 
 .FeaturePreview__trailingSection {
   --brand-color-canvas-subtle: var(--base-color-scale-gray-1);
@@ -13,4 +9,8 @@
 
 [data-color-mode='dark'] .FeaturePreview__trailingSection {
   --brand-color-canvas-subtle: var(--base-color-scale-gray-7);
+}
+
+.FeaturePreview__borderTop {
+  border-top: var(--brand-borderWidth-thin) solid var(--brand-color-border-default);
 }
