--- a/packages/react/src/Timeline/Timeline.module.css
+++ b/packages/react/src/Timeline/Timeline.module.css
@@ -14,6 +14,10 @@
   line-height: var(--brand-Timeline-lineHeight);
 }
 
+.Timeline--full-width .Timeline__item {
+  max-width: none;
+}
+
 .Timeline__item:not(:last-child) {
   padding-bottom: var(--base-size-32);
 }
