--- a/packages/react/src/river/river-shared.module.css
+++ b/packages/react/src/river/river-shared.module.css
@@ -44,11 +44,11 @@
 }
 
 .River__trailingComponent {
-  margin-block-start: var(--base-size-48);
+  margin-block-start: var(--brand-River-spacing-inner);
 }
 
 .River__trailingComponent--divider {
-  padding-block-start: var(--base-size-48);
+  padding-block-start: var(--brand-River-spacing-inner);
   border-top: var(--brand-borderWidth-thin) solid var(--brand-color-border-muted);
 }
 
@@ -105,9 +105,75 @@
   }
 
   .River--align-center .River__visual {
-    margin-bottom: var(--base-size-48);
+    margin-bottom: var(--brand-River-spacing-inner);
   }
+
   .River--align-center .River__content {
-    margin-top: var(--base-size-48);
+    margin-top: var(--brand-River-spacing-inner);
+  }
+}
+
+.RiverBreakout {
+  display: flex;
+  flex-direction: column;
+  gap: var(--brand-River-spacing-inner);
+  padding-block-end: var(--brand-River-spacing-outer);
+  padding-block-start: var(--brand-River-spacing-outer);
+}
+
+.RiverBreakout .River__text {
+  color: var(--brand-color-text-default);
+  font-size: var(--brand-text-size-500);
+  font-weight: var(--brand-heading-weight-500);
+  letter-spacing: var(--brand-heading-letterSpacing-500);
+  line-height: var(--brand-text-lineHeight-500);
+}
+
+.RiverBreakout--muted .River__text {
+  color: var(--brand-color-text-subtle);
+}
+
+.RiverBreakout .River__text em {
+  color: var(--brand-color-text-default);
+  font-style: normal;
+}
+
+.RiverBreakout .River__visual {
+  order: unset;
+}
+
+.RiverBreakout__hiddenHeading {
+  border: 0;
+  clip: rect(1px, 1px, 1px, 1px);
+  height: 1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+}
+
+@media screen and (min-width: 48rem) {
+  .RiverBreakout .River__content {
+    display: grid;
+    gap: var(--brand-River-spacing-inner);
+    grid-template-areas:
+      'text trailingComponent'
+      'cta trailingComponent';
+    grid-template-columns: 5fr 3fr;
+  }
+
+  .RiverBreakout .River__call-to-action {
+    grid-area: cta;
+    margin-block-start: 0;
+  }
+
+  .RiverBreakout .River__trailingComponent {
+    grid-area: trailingComponent;
+    justify-self: end;
+    margin-block-start: 0;
+  }
+
+  .RiverBreakout .River__text {
+    grid-area: text;
   }
 }
