--- a/packages/react/src/templates/FeaturePreviewLPs/FeaturePreviewLevelOne/FeaturePreviewLevelOne.module.css
+++ b/packages/react/src/templates/FeaturePreviewLPs/FeaturePreviewLevelOne/FeaturePreviewLevelOne.module.css
@@ -16,3 +16,10 @@
 .FeaturePreview__borderTop {
   border-top: var(--brand-borderWidth-thin) solid var(--brand-color-border-default);
 }
+
+.FeaturePreview__contentArea {
+  border-top-left-radius: var(--brand-borderRadius-large);
+  border-top-right-radius: var(--brand-borderRadius-large);
+  background: var(--brand-color-canvas-default);
+  margin-top: calc(0px - var(--base-size-24));
+}
