--- a/packages/react/src/VideoPlayer/VideoPlayer.module.css
+++ b/packages/react/src/VideoPlayer/VideoPlayer.module.css
@@ -12,16 +12,6 @@
 /* 8. Captions                                                */
 /* ---------------------------------------------------------- */
 
-.VideoPlayer__srOnly:not(:focus):not(:active) {
-  clip: rect(0 0 0 0);
-  clip-path: inset(50%);
-  height: 1px;
-  overflow: hidden;
-  position: absolute;
-  white-space: nowrap;
-  width: 1px;
-}
-
 /* ---------------------------------------------------------- */
 /* 1. Container                                               */
 /* ---------------------------------------------------------- */
@@ -65,6 +55,10 @@
   box-sizing: content-box;
   background: var(--base-color-scale-blue-5);
   border-radius: 50%;
+}
+
+.VideoPlayer__playButtonInner > svg {
+  margin-left: 0.3125rem;
 }
 
 .VideoPlayer__playButton:focus {
@@ -210,7 +204,7 @@
   display: none;
 }
 
-.VideoPlayer__progressBar2 {
+.VideoPlayer__progressBar {
   width: 100%;
   height: 6px;
 }
@@ -394,9 +388,8 @@
   display: none;
 }
 
-.VideoPlayer__captions__text {
-  color: white;
-  font-size: 16px;
+.VideoPlayer__captionText {
+  color: var(--base-color-scale-white-0);
   text-align: center;
   background: hsl(var(--base-color-scale-black-0-hsl) / 50%);
   padding: var(--brand-VideoPlayer-closedCaption-text-padding);
