--- a/packages/react/src/VideoPlayer/VideoPlayer.module.css
+++ b/packages/react/src/VideoPlayer/VideoPlayer.module.css
@@ -325,7 +325,6 @@
 .VideoPlayer__tooltip {
   position: absolute;
   bottom: 100%;
-  /* left: 50%; */
   z-index: 2;
   width: 10px;
   height: 10px;
@@ -345,7 +344,7 @@
   height: 10px;
   content: '';
   background: var(--base-color-scale-white-0);
-  border-radius: 2px;
+  border-radius: var(--brand-borderRadius-small);
   transform: rotate(45deg);
 }
 
