fix border colors

--- a/packages/react/src/Button/Button.module.css
+++ b/packages/react/src/Button/Button.module.css
@@ -63,13 +63,13 @@
   border: solid var(--brand-borderWidth-thin) var(--brand-button-primary-borderColor-rest);
 }
 
-.Button--primary:not(.Button[disabled], .Button[aria-disabled='true']):hover {
+.Button--primary:not(.Button[disabled], .Button[aria-disabled='true'], [aria-expanded='true']):hover {
   background-color: var(--brand-button-primary-bgColor-hover);
   border-color: var(--brand-button-primary-borderColor-hover);
 }
 
 .Button--primary:not(.Button[disabled], .Button[aria-disabled='true']):active,
-.Button[aria-expanded='true'] {
+.Button--primary[aria-expanded='true'] {
   background-color: var(--brand-button-primary-bgColor-active);
   border-color: var(--brand-button-primary-borderColor-active);
   box-shadow: var(--brand-button-primary-shadow-active);
@@ -103,13 +103,13 @@
   border-color: var(--brand-button-secondary-borderColor-rest);
 }
 
-.Button--secondary:not(.Button[disabled], .Button[aria-disabled='true']):hover {
+.Button--secondary:not(.Button[disabled], .Button[aria-disabled='true'], [aria-expanded='true']):hover {
   background-color: var(--brand-button-secondary-bgColor-hover);
   border-color: var(--brand-button-secondary-borderColor-hover);
 }
 
 .Button--secondary:not(.Button[disabled], .Button[aria-disabled='true']):active,
-.Button[aria-expanded='true'] {
+.Button--secondary[aria-expanded='true'] {
   background-color: var(--brand-button-secondary-bgColor-active);
   border-color: var(--brand-button-secondary-borderColor-active);
 }
